# LLM-Auto-Generate-report

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml  requirements.txt  test.py
.claude/: launch.json
app/: .env  evalution_RAG.ipynb  graph.py  streamlit_app.py  test_graph.py  test_personalize_chain.py  users.json
app/Evaluate/: Eval_text2sql.xlsx
app/Postgre/: docker-compose.yml
app/api/: deps.py  errors.py  main.py
app/db/: __init__.py  engine.py  schema.csv  schema.py  setup_checkpointer.py
app/docs/: gradio_ui_spec.md  graph_draft.md  handoff_codebase_review.md
app/llm/: __init__.py  client.py
app/models/: __init__.py
app/nodes/: __init__.py  executeSQL.py  generate_pdf.py  generate_report.py  html_details.py  human_in_the_loop.py  personalize.py  schema.py  text2sql.py  verify_correctness.py
app/report/: __init__.py
app/ui/: UI.py  gradio_app.py
output/: checkpoints.sqlite  checkpoints.sqlite-shm  checkpoints.sqlite-wal  preview_collection_payment.html  preview_customer.html  preview_generic.html  preview_sales.html
output/html_output/: report_collection_payment_20260716_104241.html  report_collection_payment_20260716_115003.html  report_collection_payment_20260716_120033.html  report_collection_payment_20260716_134030.html  report_customer_20260716_104213.html  report_customer_20260716_114930.html  report_customer_20260716_133848.html  report_generic_20260715_113640.html  report_generic_20260716_104119.html  report_generic_20260716_105915.html  report_generic_20260716_114717.html  report_generic_20260716_133422.html  (+9 more)
(+36 files in other folders)
