[project]
name = "llm-auto-generate-report"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.139.0",
    "gradio>=6.20.0",
    "ipython>=9.15.0",
    "jinja2>=3.1.6",
    "langchain>=1.3.11",
    "langchain-openai>=1.3.3",
    "numpy>=2.5.1",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "psycopg2>=2.9.12",
    "pypdf>=6.14.2",
    "sqlalchemy>=2.0.51",
    "streamlit>=1.58.0",
    "tool>=0.8.0",
    "tools>=1.0.30",
    "watchdog>=6.0.0",
    "weasyprint>=69.0",
]
